modularized css and better folder structure for components

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,70 +1,6 @@
-$card-border-color: rgba(0, 0, 0, 0.125);
-$collected-header-color: #96ff7c;
-$not-collected-header-color: #ffbcbc;
+@import "./reusable/collapse-section-header";
+@import "./reusable/toggle-complete-collapse-row";
 
 .container {
   text-align: center;
-  .main-section {
-    .main-header {
-      margin-left: 1px;
-      background-color: $not-collected-header-color;
-
-      button {
-        font-weight: 600;
-        text-decoration: underline;
-      }
-
-      &.collected {
-        background-color: $collected-header-color;
-      }
-    }
-    .collapse-section {
-      .row {
-        .checked-field {
-          display: flex;
-          justify-content: center;
-          cursor: pointer;
-        }
-        .sub-header {
-          border-left: 1px solid $card-border-color;
-          border-radius: 0px;
-
-          &.previous-open {
-            border-top: 1px solid $card-border-color;
-          }
-        }
-
-        .sub-collapse-section {
-          .sub-sub-header {
-            border-left: 1px solid $card-border-color;
-            .location-room {
-              font-weight: 600;
-              font-size: 20px;
-              text-decoration: underline;
-            }
-
-            img {
-              width: 100%;
-            }
-          }
-
-          &.show {
-            .row:last-of-type {
-              .sub-sub-header {
-                border-bottom: none;
-              }
-            }
-          }
-        }
-
-        &:last-of-type {
-          .sub-header {
-            &:not(.show) {
-              border-bottom: none;
-            }
-          }
-        }
-      }
-    }
-  }
 }
