Added new rows and basic structure of secret door section

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,10 @@
 @import "./reusable/collapse-section-header";
 @import "./reusable/toggle-complete-collapse-row";
 
+h1, h2, h3, h4, h5, h6, p {
+  margin-bottom: 0;
+}
+
 .container {
   text-align: center;
 }
